--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<h2>"La chouette agence est une excellente agence web !</br> 
+				<h2>"La chouette agence est une excellente agence web !
 					Les web designers ont réussi à capture l'essence de
-					notre entreprise et à l'intégrer à notre site.</br>
+					notre entreprise et à l'intégrer à notre site.
 					Cela nous a aidé à doubler nos ventes en ligne à Lyon."</h2>
 				<p>Maxime Guibard, PDG de À vos fourchettes</p>
 			</div>
@@ -154,7 +154,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2>Nous travaillons avec beaucoup de clients,</br> voici nos réalisations.</h2>
+				<h2>Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
@@ -207,7 +207,7 @@
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<h2 class="mg-md text-center tc-white">
-					Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+					Prêt pour redonner vie à votre projet ?</br> Contactez notre équipe !
 				</h2>
 				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
@@ -221,7 +221,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<p class="text-center black">
 					La chouette agence - Agence web basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
