--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.png" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.png" class="img-responsive portfolio-thumb" alt="Visuel vue de haut avec l'ensemble de l'équipement d'un voyageur (ordinateur portable, appareil photos, drone, etc.)."/></a>
+				<a href="#" data-lightbox="img/3.png" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.png" class="img-responsive portfolio-thumb" alt="Visuel de l'ensemble de l'équipement d'un voyageur."/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -188,7 +188,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.png" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.png" class="img-responsive portfolio-thumb" alt="Visuel vue de haut sur une table de travail avec un ordinateur portable, des documents, un café, etc." /></a>
+				<a href="#" data-lightbox="img/4.png" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.png" class="img-responsive portfolio-thumb" alt="Visuel d'une table de travail avec un ordinateur portable." /></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
@@ -206,9 +206,9 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2 class="mg-md text-center tc-white">
+				<h1 class="mg-md text-center tc-white">
 					Prêt pour redonner vie à votre projet ?</br> Contactez notre équipe !
-				</h2>
+				</h1>
 				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
 		</div>
