--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2 class="mg-md text-center tc-white">
-					Prêt pour redonner vie à votre projet ?</br> Contactez notre équipe !
-				</h2>
+				<div class="mg-md text-center tc-white">
+					<h2>Prêt pour redonner vie à votre projet ?</br> Contactez notre équipe !</h2>
+				</div>
 				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
 		</div>
