--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
+<header>
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 
@@ -56,8 +57,10 @@
 		</nav>
 	</div>
 </div>
+</header>
 <!-- bloc-0 END -->
 
+<main>
 <!-- bloc-1-presentation -->
 <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 	<div class="container bloc-lg">
@@ -215,8 +218,10 @@
 	</div>
 </div>
 <!-- bloc-5-cta END -->
+</main>
 
 <!-- Footer - bloc-8 -->
+<footer>
 <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
@@ -249,6 +254,7 @@
 		</div>
 	</div>
 </div>
+</footer>
 <!-- Footer - bloc-8 END -->
 
 </div>
