--- a/page2.html
+++ b/page2.html
@@ -30,6 +30,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
+<header>
 <div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 		<nav class="navbar row">
@@ -49,8 +50,10 @@
 		</nav>
 	</div>
 </div>
+</header>
 <!-- bloc-0 END -->
 
+<main>
 <!-- bloc-6 -->
 <div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 	<div class="container bloc-lg">
@@ -112,13 +115,14 @@
 	</div>
 </div>
 <!-- bloc-7 END -->
+</main>
 
 <!-- ScrollToTop Button -->
 <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 <!-- ScrollToTop Button END-->
 
-
 <!-- Footer - bloc-8 -->
+<footer>
 <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
@@ -152,6 +156,7 @@
 		</div>
 	</div>
 </div>
+</footer>
 <!-- Footer - bloc-8 END -->
 
 </div>
