--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2>La chouette agence est une agence de web design qui aide les entreprise</br> à devenir attractives et visibles sur Internet.</h2>
+				<h2>La chouette agence est une agence de web design qui aide les entreprise<br> à devenir attractives et visibles sur Internet.</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -210,7 +210,7 @@
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<h2 class="mg-md text-center tc-white">
-					Prêt pour redonner vie à votre projet ?</br> Contactez notre équipe !
+					Prêt pour redonner vie à votre projet ?<br> Contactez notre équipe !
 				</h2>
 				<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
@@ -253,6 +253,7 @@
 			</div>
 		</div>
 	</div>
+</div>
 </div>
 </footer>
 <!-- Footer - bloc-8 END -->
